updated screen ui

--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -1,308 +1,355 @@
 <!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
 "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
 <html>
- <head>
-  <title>Enter Issue (2.1.0)</title>
-  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
- </head>
 
- <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
+<head>
+	<meta name="version" content="1.1.0.121" />
+	<meta name="keywords" content="CollabNet, Collabnet, collabnet, Collaboration, Companies, Open Source, Software, Software Development, Open Source Model, Development, San Francisco, New York" />
+	<meta name="description" content="CollabNet, Facilitating Open Source Software Development" />
+	
+	<!-- This is the merged Style Guide between the Scarab and the SourceCast v1.2 UI
+	see the comments below for how the code is broken into modules;
+	
+	Class Map:
+	
+---------:banner:---------------------
+---------:crumbbar:-------------------
+-:leftcol:- ---:bodycol:--------------
+----------- --------------------------
+--navcol--- ----app-------------------
+--helptext- --------------------------
+----------- --------------------------
+----------- --------------------------
+----------- --------------------------
+---------:footer:---------------------
+	
+	-->
+	
+	<title>Enter Issue (2.1.0)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
 
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="150" id="leftcol">
-      <div id="projnav">
+<body>
+<form action="#" method="get">
 
-<small><small>
-<a href="#">Start page</a><br>
-<a href="#">Projects</a>
-
-<p><small><small><a href="#">Project X.X home</a></small></small><br>
-<small><small><font color="#666666">Project Tools</font></small></small><br>
-<small><small><a href="#">Documents</a></small></small><br>
-<small><small>Issue tracking</small></small><br>
-		<ul>
-		<li><small><small>Enter issue</small></small></li>
-		<li><small><small><a href="#">Enter issue</a></small></small></li>
-		<li><small><small><a href="#">Reports</a></small></small></li>
-		<li><small><small><a href="#">Vote management</a></small></small></li>
-		<li><small><small><a href="#">Workflow customization options</a></small></small></li>
-		</ul>
-	<small><small><a href="#">Mailing lists</a></small></small><br>
-	<small><small><a href="#">Members</a></small></small><br>
-	<small><small><a href="#">News</a></small></small><br>
-	<small><small><a href="#">Source code</small></small></a>
-<p>
-<small><small><a href="#">Admin Functions</a></small></small>
-</p>
-</small></small>
-
-      </div>
-     </td>
-
-     <td id="bodycol">
-
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="1" width="100%">
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
 <tr>
-<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
-
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="1">
-<tr>
-<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
-&nbsp;<select>
-          <option>
-           saved queries
-          </option>
-
-          <option>
-           query one
-          </option>
-
-          <option>
-           query two
-          </option>
-         </select>&nbsp;<input type="submit" name="query" value="go">&nbsp;</td>
-
-<td bgcolor="#333333"><br></td>
-<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
-&nbsp;<input type="text" size="15" name="">&nbsp;<input type="submit" name="query" value="query">&nbsp;
-
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
 </td>
-<td bgcolor="#333333"><br></td>
-<td BGCOLOR="#cccccc" ALIGN="LEFT" class="PlainText">
-&nbsp;<a href="#">Advanced query</a>&nbsp;|&nbsp;<a href="#">Custom query</a>&nbsp;
+<td id="bodycol">
+<!-- Structural Elements -->
+	
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app">
+	
+		<h2>Enter Issue (2.1.0)</h2>
+		
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<th>Summary info</th>
+			<td><a href="#" title="view duplicate check information">Duplicate check</a></td>
+			<td><a href="#" title="view verbose information">Verbose info</a></td>
+			</tr>
+			</table>
+		</div>
+		
+		
+		
+		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+		
+		<h3>apply issue entry template</h3>
+		
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<th width="120">templates:</th>
+			
+			<td><select>
+			<option>
+			No template
+			</option>
+			<option>
+			Template X
+			</option>
+			
+			<option>
+			Template Y
+			</option>
+			
+			<option>
+			Template Z
+			</option>
+			</select> &#160;<input type="submit" value="select" /> &#160;<a href="#">template list</a></td>
+			</tr>
+			</table>
+		</div>
+		
+		
+		<h3>Input Your Issue:</h3>
+		
+		<div class="axial">
+			<table width="100%" cellspacing="2" cellpadding="3" border="1">
+			<tr>
+			<th width="120">issue summary:</th>
+			<td><input type="text" value="" size="" /></td>
+			</tr>
+		
+			<tr>
+			<th width="120">version:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">platform:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">os:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">found during:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">issue type:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">functional area:</th>
+			<td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
+			</tr>
+	
+			<tr>
+			<th width="120">severity:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+	
+			<tr>
+			<th width="120">priority:</th>
+			<td><select>
+			<option>
+			choice 1
+			</option>
+			<option>
+			choice 2
+			</option>
+			<option>
+			choice 3
+			</option>
+			</select></td>
+			</tr>
+			</table>
+		</div>
+		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
+	</div>
+	<!-- Scarab - App -->
 
+<!-- Structural Elements -->
 </td>
-
-
 </tr>
+</table>
+<!-- Structural Elements -->
 
-</TABLE>
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
 
-</td>
-
-
-</tr>
-
-</TABLE>
-
-<br>
-	 
-      <div class="app" id="div2-1-0">
-      <h2>Enter Issue (2.1.0)</h2>
-
-<p>
-<TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2">
-  <tr>
-      <td CLASS="PlainTextBold" BGCOLOR="#666666" align="CENTER" NOWRAP>&nbsp; summary info &nbsp;</td>
-   <td CLASS="PlainTextBold" width="10"><SPACER type="BLOCK" width="10"></td>
-      <td CLASS="PlainText"  BGCOLOR="#cccccc" align="CENTER" NOWRAP>&nbsp; 
-         <a href="#">Duplicate check</a>
-      &nbsp;</td>
-   <td CLASS="PlainTextBold" width="10"><SPACER type="BLOCK" width="10"></td>
-      <td CLASS="PlainText"  BGCOLOR="#cccccc" align="CENTER" NOWRAP>&nbsp; 
-         <a href="#">verbose info</a>
-      &nbsp;</td>
-</tr></td>
-</table><TABLE BORDER="0" CELLSPACING="0" CELLPADDING="2" width="100%">
-<tr>
-<td BGCOLOR="#666666" ALIGN="LEFT" class="PlainText">
-&nbsp;
-</td>
-</tr>
-
-</TABLE></p>
-
-
- 
-      <h3>apply issue entry template</h3>
-	<div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">templates:</th>
-
-         <td><select>
-          <option>
-          No template
-          </option>
-          <option>
-          Template X
-          </option>
-
-          <option>
-          Template Y
-          </option>
-
-          <option>
-          Template Z
-          </option>
-         </select> &#160;<input type="submit" value="select" /> &#160;<a href="#">template list</a></td>
-        </tr>
-       </table>
-      </div>
-
-
-
-
-<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
-
-      <h3>Input Your Issue:</h3>
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">issue summary:</th>
-
-         <td><input type="text" value="" size="" /></td>
-        </tr>
-
-        <tr>
-         <th width="120">version:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">platform:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">os:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">found during:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">issue type:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">functional area:</th>
-
-         <td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
-        </tr>
-
-        <tr>
-         <th width="120">severity:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-
-        <tr>
-         <th width="120">priority:</th>
-
-         <td><select>
-          <option>
-           choice 1
-          </option>
-
-          <option>
-           choice 2
-          </option>
-
-          <option>
-           choice 3
-          </option>
-         </select> </td>
-        </tr>
-       </table>
-      </div>
-
-<p class="functnbar"><input type="submit" value="check for dupes" />&#160;<input type="reset" value="reset form" /></p>
-     </div></td>
-    </tr>
-   </table>
-  </form>
- </body>
+</form>
+</body>
 </html>
 
 
