updated screen ui

--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -3,28 +3,6 @@
 <html>
 
 <head>
-	<meta name="version" content="1.1.0.121" />
-	<meta name="keywords" content="CollabNet, Collabnet, collabnet, Collaboration, Companies, Open Source, Software, Software Development, Open Source Model, Development, San Francisco, New York" />
-	<meta name="description" content="CollabNet, Facilitating Open Source Software Development" />
-	
-	<!-- This is the merged Style Guide between the Scarab and the SourceCast v1.2 UI
-	see the comments below for how the code is broken into modules;
-	
-	Class Map:
-	
----------:banner:---------------------
----------:crumbbar:-------------------
--:leftcol:- ---:bodycol:--------------
------------ --------------------------
---navcol--- ----app-------------------
---helptext- --------------------------
------------ --------------------------
------------ --------------------------
------------ --------------------------
----------:footer:---------------------
-	
-	-->
-	
 	<title>Enter Issue (2.1.0)</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
@@ -161,7 +139,7 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app">
+	<div class="app" id="div2-1-0">
 	
 		<h2>Enter Issue (2.1.0)</h2>
 		
@@ -174,9 +152,7 @@
 			</tr>
 			</table>
 		</div>
-		
-		
-		
+				
 		<p id="functnbar"><input type="submit" value="check for dupes" class="bttn" />&#160;<input type="reset" value="reset form" class="bttn" /></p>
 		
 		<h3>apply issue entry template</h3>
@@ -204,8 +180,7 @@
 			</select> &#160;<input type="submit" value="select" /> &#160;<a href="#">template list</a></td>
 			</tr>
 			</table>
-		</div>
-		
+		</div>		
 		
 		<h3>Input Your Issue:</h3>
 		
