--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -1,215 +1,286 @@
 <!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
 "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
 <html>
- <head>
-  <title>Identified as Duplicate (2.1.1)</title>
-  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
- </head>
 
- <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
-
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="100" id="leftcol">
-      <div id="projnav">
-       <a href="#">projectnav</a> 
-
-       <ul>
-        <li><a href="#">item1</a></li>
-
-        <li><a href="#">item2</a></li>
-       </ul>
-
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
-      </div>
-     </td>
-
-     <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
-
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
-
-      <div class="app" id="div2-1-1">
-      <h2>Identified as Duplicate (2.1.1)</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-
-      <p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
-
-      <h3>New Issue</h3>
-
-             <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th>Issue summary x</th>
-
-         <th>*platform x</th>
-
-         <th>*OS x</th>
-
-         <th>*issue type x</th>
-
-         <th>*severity x</th>
-
-         <th>xx/xx/2001</th>
-
-         <th>unassigned</th>
-        </tr>
-
-        <tr>
-         <td>summary</td>
-
-         <td>platform</td>
-
-         <td>os</td>
-
-         <td>type</td>
-
-         <td>severity</td>
-
-         <td>xx/xx/2001</td>
-
-         <td>xx/xx/2001</td>
-        </tr>
-
-       </table>
-      
-
-      <h3>Possible Duplicates</h3>
-
-             <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
-
-         <th><a href="#" title="sort">issue ID #:</a></th>
-
-         <th><a href="#" title="sort">issue summary:</a></th>
-
-         <th><a href="#" title="sort">platform:</a></th>
-
-         <th><a href="#" title="sort">os:</a></th>
-
-         <th><a href="#" title="sort">issue type:</a></th>
-
-         <th><a href="#" title="sort">severity:</a></th>
-
-         <th><a href="#" title="sort">creation date:</a></th>
-
-         <th><a href="#" title="sort">date closed:</a></th>
-        </tr>
-
-        <tr class="a">
-         <td><input type="checkbox" /></td>
-
-         <td><strong><a href="#">issue id #</a></strong></td>
-
-         <td>summary</td>
-
-         <td>platform</td>
-
-         <td>os</td>
-
-         <td>type</td>
-
-         <td>severity</td>
-
-         <td>xx/xx/2001</td>
-
-         <td>xx/xx/2001</td>
-        </tr>
-
-        <tr class="b">
-         <td><input type="checkbox" /></td>
-
-         <td><strong><a href="#">issue id #</a></strong></td>
-
-         <td>summary</td>
-
-         <td>platform</td>
-
-         <td>os</td>
-
-         <td>type</td>
-
-         <td>severity</td>
-
-         <td>xx/xx/2001</td>
-
-         <td>xx/xx/2001</td>
-        </tr>
-
-        <tr class="a">
-         <td><input type="checkbox" /></td>
-
-         <td><strong><a href="#">issue id #</a></strong></td>
-
-         <td>summary</td>
-
-         <td>platform</td>
-
-         <td>os</td>
-
-         <td>type</td>
-
-         <td>severity</td>
-
-         <td>xx/xx/2001</td>
-
-         <td>xx/xx/2001</td>
-        </tr>
-
-        <tr class="b">
-         <td><input type="checkbox" /></td>
-
-         <td><strong><a href="#">issue id #</a></strong></td>
-
-         <td>summary</td>
-
-         <td>platform</td>
-
-         <td>os</td>
-
-         <td>type</td>
-
-         <td>severity</td>
-
-         <td>xx/xx/2001</td>
-
-         <td>xx/xx/2001</td>
-        </tr>
-       </table>
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">note:</th>
-
-         <td>
-          <textarea rows="4" cols="40">
-          </textarea> 
-         </td>
-        </tr>
-       </table>
-      </div>
-
-          <p><input type="submit" value="add vote to selected" />&nbsp;
-          <input type="submit" value="submit note only" /></p>
-          Text entered into the "note" text area will be appended to "comments" of selected issue(s)
-          when either "add vote to selected" or "submit note only" are executed.
-
-      <p class="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" />
-      </p>
-     </div></td>
-    </tr>
-   </table>
-  </form>
- </body>
+<head>
+	<title>Identified as Duplicate (2.1.1)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
+
+<body>
+<form action="#" method="get">
+
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+	
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div2-1-1">
+		
+		<h2>Identified as Duplicate (2.1.1)</h2>
+
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<td><a href="#" title="view summary information">Summary info</a></td>
+			<th>Duplicate check</th>
+			<td><a href="#" title="view verbose information">Verbose info</a></td>
+			</tr>
+			</table>
+		</div>
+		
+		<p id="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+
+		<h3>New Issue</h3>
+
+		<table width="100%" cellpadding="3" cellspacing="2" border="1">
+		<tr>
+		<th>Issue summary x</th>
+		<th>*platform x</th>
+		<th>*OS x</th>
+		<th>*issue type x</th>
+		<th>*severity x</th>
+		<th>xx/xx/2001</th>
+		<th>unassigned</th>
+		</tr>
+		
+		<tr>
+		<td>summary</td>
+		<td>platform</td>
+		<td>os</td>
+		<td>type</td>
+		<td>severity</td>
+		<td>xx/xx/2001</td>
+		<td>xx/xx/2001</td>
+		</tr>
+		</table>
+
+		<h3>Possible Duplicates</h3>
+
+		<table width="100%" cellpadding="3" cellspacing="2" border="1">
+		<tr>
+		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow.gif" width="13" height="8" alt="sort" border="0" /></a><a href="#"><img src="../csi/images/icon_downarrow.gif" width="13" height="8" alt="sort" border="0" /></a></th>
+		<th><a href="#" title="sort">issue ID #:</a></th>
+		<th><a href="#" title="sort">issue summary:</a></th>
+		<th><a href="#" title="sort">platform:</a></th>
+		<th><a href="#" title="sort">os:</a></th>
+		<th><a href="#" title="sort">issue type:</a></th>
+		<th><a href="#" title="sort">severity:</a></th>
+		<th><a href="#" title="sort">creation date:</a></th>
+		<th><a href="#" title="sort">date closed:</a></th>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td><strong><a href="#">issue id #</a></strong></td>
+		<td>summary</td>
+		<td>platform</td>
+		<td>os</td>
+		<td>type</td>
+		<td>severity</td>
+		<td>xx/xx/2001</td>
+		<td>xx/xx/2001</td>
+		</tr>
+		
+		<tr class="b">
+		<td><input type="checkbox" /></td>
+		<td><strong><a href="#">issue id #</a></strong></td>
+		<td>summary</td>
+		<td>platform</td>
+		<td>os</td>
+		<td>type</td>
+		<td>severity</td>
+		<td>xx/xx/2001</td>
+		<td>xx/xx/2001</td>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td><strong><a href="#">issue id #</a></strong></td>
+		<td>summary</td>
+		<td>platform</td>
+		<td>os</td>
+		<td>type</td>
+		<td>severity</td>
+		<td>xx/xx/2001</td>
+		<td>xx/xx/2001</td>
+		</tr>
+		
+		<tr class="b">
+		<td><input type="checkbox" /></td>
+		<td><strong><a href="#">issue id #</a></strong></td>
+		<td>summary</td>
+		<td>platform</td>
+		<td>os</td>
+		<td>type</td>
+		<td>severity</td>
+		<td>xx/xx/2001</td>
+		<td>xx/xx/2001</td>
+		</tr>
+		</table>
+
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<th width="120">note:</th>
+			<td>
+			<textarea rows="4" cols="40">
+			</textarea> 
+			</td>
+			</tr>
+			</table>
+		</div>
+
+		<p><input type="submit" value="add vote to selected" />&nbsp;<input type="submit" value="submit note only" /></p>
+		
+		Text entered into the "note" text area will be appended to "comments" of selected issue(s)
+		when either "add vote to selected" or "submit note only" are executed.
+
+		<p id="functnbar"><input type="submit" value="bypass duplicates" />&#160;<input type="submit" value="cancel" /></p>
+	</div>
+	<!-- Scarab - App -->
+
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
+
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
+
+</form>
+</body>
 </html>
