--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -1,133 +1,242 @@
 <!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
 "http://collabnet.com/dtds/collabnet_transitional_10.dtd">
-
 <html>
- <head>
-  <title>Enter Issue Verbose (2.1.2)</title>
-  <link rel="stylesheet" type="text/css" href="../csi/style/main.css" />
-  <link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
-  <link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
- </head>
 
- <body>
-  <form action="#" method="get">
-   <div id="globalnav">
-    <p><a href="#">globalnav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-   </div>
+<head>
+	<title>Enter Issue Verbose (2.1.2)</title>
+	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
+	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+</head>
 
-   <table border="0" cellspacing="0" cellpadding="0" width="95%">
-    <tr>
-     <td width="100" id="leftcol">
-      <div id="projnav">
-       <a href="#">projectnav</a> 
+<body>
+<form action="#" method="get">
 
-       <ul>
-        <li><a href="#">item1</a></li>
+	<!-- SourceCast -->
+	<div id="banner">
+		<table border="0" cellspacing="12" cellpadding="0" width="100%">
+		<tr>
+		
+		<td>
+		<div align="right" id="loginstatus">
+			<div>
+				Logged in as: <strong class="username">User XX</strong>
+			</div>
+			<div>
+				<a href="#">Edit Profile</a> | <a href="#">Logout</a>
+			</div>
+		</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- Structural Elements -->
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
+<tr>
+<td id="leftcol" nowrap="nowrap" width="20%">
+<!-- Structural Elements -->
+	
+	<!-- SourceCast -->
+	<div id="navcol">
+		<table border="0" cellspacing="0" cellpadding="0" width="100%">
+			<tr>
+			<th>
+			<a href="#">Start page</a>
+			</th>
+			</tr>
+			<tr>
+			<th>
+			<a href="#">Projects</a>/<a href="#">Categories</a>
+			</th>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			Project tools
+			</th>
+			</tr>
+			<tr>
+			<td>
+			<div>&nbsp;&nbsp;<a href="#">Documents</a></div>
+			<div>&nbsp;&nbsp;Issue tracking</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Enter issue</div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Reports</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Vote management</a></div>
+			<div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- <a href="#">Workflow options</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Mailing lists</a></div> 
+			<div>&nbsp;&nbsp;<a href="#">Members</a></div>  
+			<div>&nbsp;&nbsp;<a href="#">News</a></div>
+			<div>&nbsp;&nbsp;<a href="#">Source code</a></div>
+			</td>
+			</tr>
+			<tr>
+			<td>&nbsp;</td>
+			</tr>
+			<tr>
+			<th>
+			&nbsp;<a href="#">Admin Functions</a>
+			</th>
+			</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+	<!-- SourceCast -->
+	<div id="helptext">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+		<th>How do I...?</th>
+		</tr>
+		<tr>
+		<td>
+			<div> 
+				<a href="#">[Go to help index]</a>
+			</div>
+			<div> 
+				<a href="#">Use this page</a>...
+			</div>
+			<div>
+				<a href="#">Learn about a project</a>...
+			</div>
+			<div>
+				<a href="#">Join a project</a>...
+			</div>
+		</td>
+		</tr>
+		</table>
+	</div>
+	<!-- SourceCast -->
+	
+<!-- Structural Elements -->
+</td>
+<td id="bodycol">
+<!-- Structural Elements -->
+	
+	<!-- Scarab - App -->
+	<div id="topmodule">
+		<table border="0" cellspacing="0" cellpadding="3" width="100%">
+		<tr>
+			<td nowrap="nowrap">
+			<select>
+			<option>saved queries</option>
+			<option>query one</option>
+			<option>query two</option>
+			</select> 
+			<input type="submit" name="query" value="Go" class="bttn" />
+			&nbsp;
+			<input type="text" size="15" name="" />
+			<input type="submit" name="query" value="Query" class="bttn" />
+			&nbsp;
+			<a href="#">Advanced</a>&nbsp;|&nbsp;<a href="#">Custom</a>
+			</td>			
+		</tr>
+		</table>
+	</div>
+	<!-- Scarab - App -->
+	
+	<!-- Scarab - App -->
+	<div class="app" id="div2-1-2">
+		<h2>Enter Issue Verbose (2.1.2)</h2>
+		
+		<div id="tabs">
+			<table cellpadding="3" cellspacing="0" border="0">
+			<tr>
+			<td><a href="#" title="view summary information">Summary info</a></td>
+			<td><a href="#" title="view duplicate check information">Duplicate check</a></th>
+			<th>Verbose info</th>
+			</tr>
+			</table>
+		</div>
+		
+		<p id="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+	
+		<h3>Input Your Issue:</h3>
+	
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<th width="120">issue description:</th>
+			<td><textarea rows="4" cols="40"></textarea></td>
+			</tr>
+			</table>
+		</div>
+	
+		<h3>URL</h3>
+		
+		<table width="100%" border="1" cellspacing="2" cellpadding="3">
+		<tr>
+		<th>select:</th>
+		<th>url:</th>
+		<th>url description:</th>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td><input type="text" value="" size="" /></td>
+		<td><input type="text" value="" size="" /></td>
+		</tr>
+		</table>
+	
+		<p><input type="submit" value="add url" />&#160;<input type="submit" value="delete url" /></p>
+	
+		<h3>Add Attachment:</h3>
+	
+		<table width="100%" border="1" cellspacing="2" cellpadding="3">
+		<tr>
+		<th>select:</th>
+		<th>file:</th>
+		<th>file description:</th>
+		</tr>
+		
+		<tr class="a">
+		<td><input type="checkbox" /></td>
+		<td>file://xxx/xxx/xxx.xxx</td>
+		<td><input type="text" value="" size="" /></td>
+		</tr>
+		</table>
+	
+		<p><input type="submit" value="add/edit attachment" />&#160;<input type="submit" value="delete attachment" /></p>
+	
+		<div class="axial">
+			<table width="100%" cellpadding="3" cellspacing="2" border="1">
+			<tr>
+			<td>
+			<p>Click add/edit attachment to browse for and select a file. If you do not see the add/edit attachment button, your browser does not support file uploads. (Windows users, set Files of Type: to be All Files (*.*) to get a complete file listing.) The File field cannot be used to rename files.</p>
+			</td>
+			</tr>
+			</table>
+		</div>
+	
+		<p>workflow options:&#160; <input type="radio" name="foo" /> return to 2.1.0 <input type="radio" name="foo" /> return to 2.0.0 <input type="radio" name="foo" /> return to 2.1.3</p>
+	
+		<p id="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
+	</div>
+	<!-- Scarab - App -->
 
-        <li><a href="#">item2</a></li>
-       </ul>
+<!-- Structural Elements -->
+</td>
+</tr>
+</table>
+<!-- Structural Elements -->
 
-       <p><a href="http://collabnet.cleverchimp.com/dtds/validator.html">validate me</a></p>
-      </div>
-     </td>
+	<!-- SourceCast -->
+	<div id="footer">
+		<p>
+		<a href="#">Domain Home</a> |
+		<a href="#">Help</a> | 
+		<a href="#">Site FAQ</a> |
+		<a href="#">Feedback</a>
+		</p>
+	</div>
+	<!-- SourceCast -->
 
-     <td id="bodycol">
-      <div id="featurenav">
-       <p class="crumbing"><a href="#">crumbing</a> &gt; <a href="#">item1</a> &gt; item2</p>
-
-       <p><a href="#">primaryfeaturenav</a> | <a href="#">item1</a> | <a href="#">item2</a></p>
-      </div>
-
-      <div class="app" id="div2-1-2">
-      <h2>Enter Issue Verbose (2.1.2)</h2>
-
-      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
-
-<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
-
-      <h3>Input Your Issue:</h3>
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">issue description:</th>
-
-         <td><textarea rows="4" cols="40">
-         </textarea></td>
-        </tr>
-       </table>
-      </div>
-
-      <h3>URL</h3>
-
-             <table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-         <th>select:</th>
-
-         <th>url:</th>
-
-         <th>url description:</th>
-        </tr>
-
-        <tr class="a">
-         <td><input type="checkbox" /></td>
-
-         <td><input type="text" value="" size="" /></td>
-
-         <td><input type="text" value="" size="" /></td>
-        </tr>
-       </table>
-      
-
-      <p>
-       <input type="submit" value="add url" />&#160;<input type="submit" value="delete url" />
-      </p>
-
-      <h3>Add Attachment:</h3>
-
-             <table width="100%" border="1" cellspacing="2" cellpadding="3">
-        <tr>
-         <th>select:</th>
-
-         <th>file:</th>
-
-         <th>file description:</th>
-        </tr>
-
-        <tr class="a">
-         <td><input type="checkbox" /></td>
-
-         <td>file://xxx/xxx/xxx.xxx</td>
-
-         <td><input type="text" value="" size="" /></td>
-        </tr>
-       </table>
-      
-
-      <p>
-       <input type="submit" value="add/edit attachment" />&#160;<input type="submit" value="delete attachment" />
-      </p>
-
-      <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <td>
-          <p>Click add/edit attachment to browse for and select a file. If you do not see the add/edit attachment button, your browser does not support file uploads. (Windows users, set Files of Type: to be All Files (*.*) to get a complete file listing.) The File field cannot be used to rename files.</p>
-         </td>
-        </tr>
-       </table>
-      </div>
-
-      <p>
-       workflow options:&#160; <input type="radio" name="foo" /> return to 2.1.0 <input type="radio" name="foo" /> return to 2.0.0 <input type="radio" name="foo" /> return to 2.1.3
-      </p>
-
-<p class="functnbar"><input type="submit" value="submit issue" />&#160;<input type="reset" value="reset form" /></p>
-     </div></td>
-    </tr>
-   </table>
-  </form>
- </body>
+</form>
+</body>
 </html>
+
 
 
