updated screen ui

--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -146,7 +146,7 @@
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td><a href="#" title="view summary information">Summary info</a></td>
-			<td><a href="#" title="view duplicate check information">Duplicate check</a></th>
+			<td><a href="#" title="view duplicate check information">Duplicate check</a></td>
 			<th>Verbose info</th>
 			</tr>
 			</table>
