updated screen ui

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -121,6 +121,14 @@ table {width: 100%} /* ]]> */
 
       <td>? - is this a state of AttributeEdit?</td>
      </tr>
+	 
+	 <tr>
+      <td><a href="./milestone1x_screens/funct_dir.html">Home Screen</a></td>
+
+      <td>User home screen</td>
+
+      <td>na</td>
+     </tr>
     </table>
    </dd>
 
