updated screen ui

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -123,7 +123,7 @@ table {width: 100%} /* ]]> */
      </tr>
 	 
 	 <tr>
-      <td><a href="./milestone1x_screens/funct_dir.html">Home Screen</a></td>
+      <td><a href="./milestone1x_screens/funct_dir.html">funct_dir</a></td>
 
       <td>User home screen</td>
 
