updated screen ui

--- a/www/ui/milestone1x_screens/funct_dir.html
+++ b/www/ui/milestone1x_screens/funct_dir.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-	<title>Home Screen</title>
+	<title>Scarab Functions Index</title>
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
@@ -140,12 +140,13 @@
 	
 	<!-- Scarab - App -->
 	<div class="app" id="divfunct_dir">
-		<h2>Scarab functions index</h2>
-
+		<h2>Scarab Functions Index</h2>
+		
 		<table width="100%" cellpadding="0" cellspacing="0" border="0">
 		
 		<tr>
 		<td width="50%"><h3>General user functions</h3></td>
+		<td>&nbsp;&nbsp;</td>
 		<td width="50%"><h3>Administrative functions</h3></td>
 		</tr>
 		
@@ -168,7 +169,7 @@
 		<small>Subscription/frequency options for auto alert emails available per project.</small>
 		</p>
 		</td>
-		
+		<td>&nbsp;&nbsp;</td>
 		<td width="50%">
 		<p>
 		<a href="#"><strong>Approve / reject user submissions</strong></a><br>
