updated screen ui

--- a/www/ui/milestone2x_screens/2-6-0.html
+++ b/www/ui/milestone2x_screens/2-6-0.html
@@ -139,8 +139,7 @@
 	<!-- Scarab - App -->
 	
 	<!-- Scarab - App -->
-	<div class="app">
-		
+	<div class="app" id="div2-6-0">
 		<h2>Queue List / Search Results (2.6.0.x)</h2>
 		
 		<div id="tabs">
