for some reason, the index page I updated last July 27 was over written with a completely antique one...
how does that happen?

--- a/www/ui/index.html
+++ b/www/ui/index.html
@@ -282,12 +282,63 @@ table {width: 100%} /* ]]> */
      </tr>
 
      <tr>
-      <td><a href="./milestone1x_screens/">1</a></td>
+      <td><a href="./milestone6x_screens/report_step1.html">2.4.0</a></td>
 
-      <td>2</td>
+      <td>step 1 in reports wizard</td>
 
       <td>?</td>
      </tr>
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step1-5.html">2.4.0</a></td>
+
+      <td>step 2 in reports wizard: comparative analysis</td>
+
+      <td>?</td>
+     </tr>
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step2.html">2.4.0</a></td>
+
+      <td>step 3 in reports wizard: comparative analysis</td>
+
+      <td>?</td>
+     </tr>
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step3.html">2.4.0.1</a></td>
+
+      <td>step 4 in reports wizard: comparative analysis output</td>
+
+      <td>?</td>
+     </tr>
+
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step1-5b.html">2.4.0</a></td>
+
+      <td>step 2 in reports wizard: rate of change</td>
+
+      <td>?</td>
+     </tr>
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step2b.html">2.4.0</a></td>
+
+      <td>step 3 in reports wizard: rate of change</td>
+
+      <td>?</td>
+     </tr>
+
+     <tr>
+      <td><a href="./milestone6x_screens/report_step3b.html">2.4.0.1</a></td>
+
+      <td>step 4 in reports wizard: rate of change output</td>
+
+      <td>?</td>
+     </tr>
+
+
     </table>
    </dd>
 
